[tool.poetry]
name = "tor_archivist"
version = "1.0.0"
description = "The officially licensed archivist for /r/TranscribersOfReddit"
authors = ["Grafeas Group <devs@grafeas.org>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8"
]

repository = "https://github.com/GrafeasGroup/tor_archivist"
homepage = "https://github.com/GrafeasGroup/tor_archivist"
exclude = ['test', 'test.*', '*.test.*', '*.test']

[tool.poetry.dependencies]
python = "^3.6"
praw = "^7.1.0"
sh = "^1.12"
bugsnag = "^3.6"
requests = "^2.22"
slackclient = "^1"
python-dotenv = "^0.10.5"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }

[tool.poetry.dev-dependencies]
better-exceptions = "^0.2.2"
pytest = "^5.1"
pytest-cov = "^2.7"

[tool.poetry.scripts]
tor-archivist = "tor_archivist.main:main"

[tool.poetry.extras]
ci = ['pytest', 'pytest-cov']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

