[tool.poetry]
name = "tor_archivist"
version = "0.7.1"
description = "The officially licensed archivist for /r/TranscribersOfReddit"
authors = ["Grafeas Group <devs@grafeas.org>"]
license = "MIT"
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: End Users/Desktop',
    'Topic :: Communications :: BBS'
]
repository = "https://github.com/GrafeasGroup/tor_archivist"
homepage = "https://github.com/GrafeasGroup/tor_archivist"
exclude = ['test', 'test.*', '*.test.*', '*.test']

[tool.poetry.dependencies]
python = "^3.6"
praw = "=5.0.1"
redis = "^2"
sh = "^1.12"
cherrypy = "^18.2"
bugsnag = "^3.6"
requests = "^2.22"
slackclient = "^1"

[tool.poetry.dev-dependencies]
better-exceptions = "^0.2.2"
pytest = "^5.1"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
tor-archivist = "tor_archivist.main:main"

[tool.poetry.extras]
ci = ['pytest', 'pytest-cov']
